--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   provider: ^6.0.2
   google_sign_in: ^5.2.3
   carousel_slider: ^4.0.0
-  http: ^0.13.4
+  http: ^0.13.5
   image_picker: ^0.8.3+1
   flutter_html: ^2.2.1
   shared_preferences: ^2.0.13
@@ -49,6 +49,9 @@ dependencies:
   datetime_picker_formfield: ^2.0.0
   calendar_appbar: ^0.0.6
   material_design_icons_flutter: ^3.2.3695
+  get: ^4.6.5
+  jwt_decode: ^0.3.1
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
