--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,9 +55,11 @@ dependencies:
   alert: ^2.0.1
   agora_rtc_engine: ^5.3.0
   permission_handler: ^10.0.1
+  agora_rtm: ^1.1.1
  
   table_calendar: ^3.0.7
-  tiengviet: ^0.5.0
+  google_fonts: ^3.0.1
+  date_format: ^2.0.7
 
 dev_dependencies:
   flutter_test:
